k8s/backend-deployment.yaml
# backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: votingapp-backend-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: votingapp-backend
  template:
    metadata:
      labels:
        app: votingapp-backend
    spec:
      containers:
      - name: backend
        image: localhost:5000/votingapp-backend:initial
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      imagePullSecrets:
      - name: regcred
